--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <!----TITLE ICON----->
 
-    <link rel="shortcut icon" href="../img/icons8-typescript-480.png" type="image/x-icon" />
+    <link rel="shortcut icon" href="img/icons8-typescript-480.png" type="image/x-icon" />
 
     <!----MAIN CSS----->
 
